# ai-agents-lab

./: .env_example  .gitignore  README.md
agents/mobile_selector/mobile_selector/: .gitignore  .huggingfaceignore  README.md  app.py  deploy.py  pyproject.toml  requirements.txt
agents/mobile_selector/mobile_selector/src/mobile_selector/: crew.py  main.py
agents/mobile_selector/mobile_selector/src/mobile_selector/config/: agents.yaml  tasks.yaml
agents/mobile_selector/mobile_selector/src/mobile_selector/tools/: push_message_tool.py
agents/mychatbot/: chatbot.py
experiments/: test1.py
