[project]
name = "mobile_selector"
version = "0.1.0"
description = "mobile_selector using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.0",
    "litellm>=1.75.3",
]

[project.scripts]
mobile_selector = "mobile_selector.main:run"
run_crew = "mobile_selector.main:run"
train = "mobile_selector.main:train"
replay = "mobile_selector.main:replay"
test = "mobile_selector.main:test"
run_with_trigger = "mobile_selector.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
